# api_rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  a faire.txt  build.rs  test.py  test2.py
boats/Boat_1/: 2025-07-15-12_25.json  2025-07-15-12_26.json  2025-07-15-12_27.json  2025-07-15-12_28.json  2025-07-15-12_29.json  2025-07-15-12_30.json  2025-07-15-12_31.json  2025-07-15-12_32.json  2025-07-15-12_33.json  2025-07-15-12_34.json  2025-07-15-12_35.json
src/: main.rs
src/database/: boat.rs  connection.rs
src/decryp/: decryp.py  joinJson.py
src/decryptCpp/: .gitmodules  README.md  WEENAV.dbc  compilationMain  main  main.cpp  main_backup.cpp  ok.trc
src/decryptCpp/src/: fileTrc.cpp
