[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
actix-web = "4"
mysql = "26.0.0"
serde_json = "1.0.140"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
inline-python = "0.14.4"
serde = "1.0.219"
mutex = "1.0.2"
dotenv = "0.15.0"
urlencoding = "2.1"
tokio = { version = "1.46.1", features = ["fs", "full"] }
actix-files = "0.6.6"
flate2 = "1.1.2"
mio = "0.8"
